add more java script to get current details

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="container">
       <header>
         <div class="current-weather" id="current-weather">
-          <span class="icon" id="icon">⛄️</span>
-          <span class="temperature" id="temperature">20°C</span>
+          <span class="icon" id="icon"></span>
+          <span class="temperature" id="temperature"></span>
         </div>
         <p class="details"></p>
-        <div id="location">Perth</div>
+        <div id="location"></div>
         Last updated:
-        <span class="current-time" id="current-time">Sat 20:30</span>
+        <span class="current-time" id="current-time"></span>
         <br />
         <span id="condition">Raining</span>
         <br />
