add forecast on javascript and changed css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span class="temperature" id="temperature"></span>
         </div>
         <p class="details"></p>
-        <div id="location"></div>
+        <div class="location" id="location"></div>
         Last updated:
         <span class="current-time" id="current-time"></span>
         <br />
@@ -48,21 +48,7 @@
           />
         </form>
 
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              Mon
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                art=""
-              />
-              <br />
-              <span class="max-temp">18°</span>
-              <span class="min-temp">12°</span>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <br />
       <hr />
